--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
     - docker
 before_install:
-    - docker build -t tedkoomen/react-test -f ./client/Dockerfile .
+    - docker build -t tedkoomen/react-test -f ./client/Dockerfile ./client
 script:
     - docker run tedkoomen/react-test npm test -- --coverage
 after_success:
